# carla-autoware

./: .gitmodules  README.md
autoware_launch/: autoware.launch  carla_autoware.launch  devel.launch  ground_filter.launch  high_level_controller.launch  high_level_controller_direct.launch  high_level_controller_pid.launch  my_sensing.launch  object_detection_tracking.launch  op_car_simulator_1.launch  op_common_params.launch  op_global_planner.launch  op_local_planner.launch  op_planner.launch  traffic_light_detector.launch  vel_pose_connector.launch
carla_autoware/: CMakeLists.txt  package.xml
carla_autoware/launch/: autoware.launch.xml  carla_autoware.xml
carla_autoware/src/: carla_vehicle_interface.cpp  pseudo_localization.cpp
carla_psim_bridge/: CMakeLists.txt  package.xml  setup.cfg  setup.py
carla_psim_bridge/carla_psim_bridge/: carla_autoware_objecs.py  carla_psim_bridge.py
carla_psim_bridge/scripts/: carla_psim_bridge.py
catkin_ws/src/carla_autoware_bridge/config/: sensors.json  sensors.json.bac
catkin_ws/src/carla_autoware_bridge/launch/: carla_autoware_bridge.launch  carla_autoware_bridge_common.launch  carla_autoware_bridge_with_manual_control.launch  tf.launch
catkin_ws/src/carla_points_map_loader/launch/: carla_points_map_loader.launch
catkin_ws/src/ros-bridge/carla_ackermann_control/src/carla_ackermann_control/: carla_ackermann_control_node.py
catkin_ws/src/ros-bridge/carla_fake_control/launch/: carla_fake_control.launch
catkin_ws/src/ros-bridge/carla_fake_control/src/carla_fake_control/: carla_fake_control_node.py
catkin_ws/src/ros-bridge/carla_ros_bridge/config/: settings.yaml
catkin_ws/src/ros-bridge/carla_ros_bridge/src/carla_ros_bridge/: bridge.py  camera.py
catkin_ws/src/ros-bridge/carla_waypoint_publisher/launch/: carla_waypoint_publisher.launch
catkin_ws/src/ros-bridge/carla_waypoint_publisher/src/carla_waypoint_publisher/: carla_waypoint_publisher.py
catkin_ws/src/ros-bridge_2/carla_ego_vehicle/src/carla_ego_vehicle/: carla_ego_vehicle.py
catkin_ws/src/ros-bridge_2/carla_ros_bridge/src/carla_ros_bridge/: bridge.py
openPlanner_launch/: autoware.launch  challenge.launch  devel.launch  my_common_params.launch  my_detection.launch  my_localization.launch  my_open_planner.launch  my_path_follower.launch  my_sensing.launch  my_tracking.launch
